src/styles/index.css
@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@400;500;600;700;800&display=swap');

body {
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
        'Helvetica Neue', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
        monospace;
}

.hero-container {
    position: relative;
}

.hero-section-container {
    height: 980px;
}

.hero-img-container {
    height: 385px;
}

@media screen and (min-width: 280px) and (max-width: 319px) {
    .hero-section-container {
        height: 1100px;
    }
}

@media screen and (min-width: 320px) and (max-width: 374px) {
    .hero-section-container {
        height: 930px;
    }
}

@media screen and (min-width: 390px) {
    .hero-section-container {
        height: 900px;
    }
}

.hero-bg-image {
    position: absolute;
    z-index: -10;
    object-fit: cover;
    top: 0;
    height: 100%;
    object-position: center;
    opacity: 25%;
}

.hero-img-container::before {
    content: '';
    background-color: #2f4858;
    background-size: 100%;
    height: 100%;
    width: 100%;
    top: 0%;
    position: absolute;
    z-index: -11;
}

@media screen and (min-width: 765px) {
    .hero-container::before {
        content: '';
        background-color: #2f4858;
        background-size: 50% 100%;
        height: 150%;
        width: 50%;
        top: -50%;
        position: absolute;
        right: 0;
        z-index: -11;
    }

    .hero-bg-image {
        position: absolute;
        top: -45%;
        height: 155%;
        width: auto;
        z-index: -10;
        object-fit: cover;
        object-position: right;
        opacity: 25%;
    }

    .hero-section-container {
        height: 537px;
    }

    .hero-img-container::before {
        height: 111%;
    }
}

@media screen and (min-width: '1024px') {
    .hero-section-container {
        height: 745px;
    }

    .hero-bg-image {
        top: -65%;
        height: 197%;
    }
}

.install-img-container {
    position: relative;
    height: 365px;
}

.installer-bg-img {
    content: '';
    position: absolute;
    object-fit: cover;
    top: 0%;
    height: 100%;
    width: 100%;
    opacity: 20%;
}

